@@ -1,11 +1,8 @@
----
-id: getting-started
-title: Getting started
----
+# Getting started
 
 By following the instructions on this page, you should be able to generate a
-[SCIP](https://github.com/sourcegraph/scip) index of your Java codebase using
-Gradle, Maven, sbt, or Bazel. See
+[SCIP](https://github.com/scip-code/scip) index of your Java codebase using
+Gradle, Maven, or Bazel. See
 [Supported build tools](#supported-build-tools) for an overview of other build
 tools that we're planning to support in the future.
 
@@ -23,62 +20,54 @@ after we renamed the "Docker container" section into "Docker image". -->
 
 ### Docker image
 
-Use the `sourcegraph/scip-java` Docker image to run `scip-java`.
+Use the `ghcr.io/scip-code/scip-java` Docker image to run `scip-java`.
 
 ```sh
-$ docker run -v $(pwd):/sources --env JVM_VERSION=17 sourcegraph/scip-java:latest scip-java index
+$ docker run -v $(pwd):/sources --env JVM_VERSION=17 ghcr.io/scip-code/scip-java:latest scip-java index
 $ src code-intel upload # (optional) upload index to Sourcegraph
 ```
 
 If everything went OK, a `index.scip` file should exist after the command has
 finished indexing the project.
 
-> The `sourcegraph/scip-java` Docker image is made available for convenience at
-> the cost of performance. The `sourcegraph/scip-java` image is a big download
-> because it includes pre-installed versions of Java 8, Java 11, and Java 17.
-> The `sourcegraph/scip-java` image has slow performance because it needs to
+> The `ghcr.io/scip-code/scip-java` Docker image is made available for convenience at
+> the cost of performance. The `ghcr.io/scip-code/scip-java` image is a big download
+> because it includes pre-installed versions of Java 17, Java 21, and Java 25.
+> The `ghcr.io/scip-code/scip-java` image has slow performance because it needs to
 > download all external dependencies of your codebase on every invocation.
 >
 > For better performance, we recommend using your own Docker image together with
 > the [Java launcher](#java-launcher) option.
 
-Java 17 is the default Java version in the `sourcegraph/scip-java` Docker image.
-Use the following commands to use a different JVM version:
+By default, the `ghcr.io/scip-code/scip-java` Docker image tries Java 21 and falls
+back to Java 17. Use the following commands to select a specific JVM version:
 
 ```sh
-# Java 8
-docker run -v $(pwd):/sources --env JVM_VERSION=8 sourcegraph/scip-java:latest scip-java index
-
-# Java 11
-docker run -v $(pwd):/sources --env JVM_VERSION=11 sourcegraph/scip-java:latest scip-java index
-
-# Java 17 (default)
-docker run -v $(pwd):/sources --env JVM_VERSION=17 sourcegraph/scip-java:latest scip-java index
+# Java 17
+docker run -v $(pwd):/sources --env JVM_VERSION=17 ghcr.io/scip-code/scip-java:latest scip-java index
 
 # Java 21
-docker run -v $(pwd):/sources --env JVM_VERSION=21 sourcegraph/scip-java:latest scip-java index
+docker run -v $(pwd):/sources --env JVM_VERSION=21 ghcr.io/scip-code/scip-java:latest scip-java index
+
+# Java 25
+docker run -v $(pwd):/sources --env JVM_VERSION=25 ghcr.io/scip-code/scip-java:latest scip-java index
 
 ```
 
 ### Java launcher
 
 Use the Java launcher to install `scip-java` on your local computer or any
-Docker image with a pre-installed Java version.
+Docker image with a pre-installed Java version (JDK 17 or newer).
 
 ```sh
 # macOS/Linux
 curl -fLo coursier https://git.io/coursier-cli \
   && chmod +x coursier \
-  && ./coursier launch com.sourcegraph:scip-java_2.13:@STABLE_VERSION@ -- --help
-
-# Windows
-bitsadmin /transfer downloadCoursierCli https://git.io/coursier-cli "%cd%\coursier"
-bitsadmin /transfer downloadCoursierBat https://git.io/coursier-bat "%cd%\coursier.bat"
-./coursier launch com.sourcegraph:scip-java_2.13:@STABLE_VERSION@ -- --help
+  && ./coursier launch org.scip-code:scip-java:@STABLE_VERSION@ -- --help
 
 # macOS Homebrew
 brew install coursier/formulas/coursier \
- && coursier launch com.sourcegraph:scip-java_2.13:@STABLE_VERSION@ -- --help
+ && coursier launch org.scip-code:scip-java:@STABLE_VERSION@ -- --help
 ```
 
 The Java launcher uses
@@ -94,19 +83,14 @@ the `index` subcommand.
 ### Java fat jar
 
 Use the fat jar option to build a standalone `scip-java` executable. Note that
-you still need a Java installation to run the `scip-java` binary.
+you still need a Java installation (JDK 17 or newer) to run the `scip-java`
+binary.
 
 ```sh
 # macOS/Linux
 curl -fLo coursier https://git.io/coursier-cli \
   && chmod +x coursier \
-  && ./coursier bootstrap --standalone -o scip-java com.sourcegraph:scip-java_2.13:@STABLE_VERSION@ --main com.sourcegraph.scip_java.ScipJava
-./scip-java --help
-
-# Windows
-bitsadmin /transfer downloadCoursierCli https://git.io/coursier-cli "%cd%\coursier"
-bitsadmin /transfer downloadCoursierBat https://git.io/coursier-bat "%cd%\coursier.bat"
-./coursier bootstrap --standalone -o scip-java com.sourcegraph:scip-java_2.13:@STABLE_VERSION@
+  && ./coursier bootstrap --standalone -o scip-java org.scip-code:scip-java:@STABLE_VERSION@ --main org.scip_code.scip_java.ScipJava
 ./scip-java --help
 ```
 
@@ -119,56 +103,49 @@ installation.
 
 The `scip-java` command-line interface is published to Maven Central. You can
 run the command-line interface as a library by directly invoking the `main()`
-method on the `com.sourcegraph.scip_java.ScipJava` class.
+method on the `org.scip_code.scip_java.ScipJava` class.
 
-[![](https://img.shields.io/maven-central/v/com.sourcegraph/scip-java_2.13)](https://repo1.maven.org/maven2/com/sourcegraph/scip-java_2.13/)
+[![](https://img.shields.io/maven-central/v/org.scip-code/scip-java)](https://repo1.maven.org/maven2/org/scip-code/scip-java/)
 
 If you're using Gradle.
 
 ```groovy
-implementation group: 'com.sourcegraph', name: 'scip-java_2.13', version: '@STABLE_VERSION@'
+implementation group: 'org.scip-code', name: 'scip-java', version: '@STABLE_VERSION@'
 ```
 
 If you're using Maven.
 
 ```xml
 <dependency>
-    <groupId>com.sourcegraph</groupId>
-    <artifactId>scip-java_2.13</artifactId>
+    <groupId>org.scip-code</groupId>
+    <artifactId>scip-java</artifactId>
     <version>@STABLE_VERSION@</version>
 </dependency>
 ```
 
-If you're using sbt.
-
-```scala
-scalaVersion := "@SCALA_VERSION@" // Only Scala 2.13 is supported.
-libraryDependencies += "com.sourcegraph" %% "scip-java" % "@STABLE_VERSION@"
-```
-
 ## Run `scip-java index`
 
-> The `index` command is only supported for Gradle, Maven and sbt. See
+> The `index` command is only supported for Gradle and Maven. See
 > [Supported build tools](#supported-build-tools) for more details about other
 > build tools.
+
+> For cross-repository navigation, additional dependency metadata is required (for Gradle, enable `maven-publish`); see [Cross-Repository Navigation (Optional)](#cross-repository-navigation-optional).
 
 Run the `scip-java index` command to generate a SCIP index for your codebase.
 This command should automatically infer the structure of your codebase and
 configure your build tool to generate SCIP.
 
 ```sh
-# At the root of a Gradle, Maven or sbt codebase.
+# At the root of a Gradle or Maven codebase.
 $ scip-java index
 ...
 info: /path/to/index.scip
 ```
 
-| Build tool | Default command                                                                 |
-| ---------- | ------------------------------------------------------------------------------- |
-| Gradle     | `clean compileTestJava compileTestScala compileTestKotlin compileTestKotlinJvm` |
-| Maven      | `--batch-mode clean verify -DskipTests`                                         |
-| sbt        | `sourcegraphEnable sourcegraphScip` (via sbt-sourcegraph plugin)                |
-| Mill       | `io.kipp.mill.scip.Scip/generate` (via mill-scip plugin)                        |
+| Build tool | Default command                                            |
+| ---------- | ---------------------------------------------------------- |
+| Gradle     | `clean compileTestJava compileTestKotlin compileTestKotlinJvm` |
+| Maven      | `--batch-mode clean verify -DskipTests`                    |
 
 Customize the build command by passing additional arguments after
 `scip-java index --`.
@@ -180,6 +157,22 @@ scip-java index -- --batch-mode -DskipTests package
 
 The `index.scip` file contains the SCIP index and is ready to be used.
 
+### Cross-Repository Navigation (Optional)
+
+By default, `scip-java index` enables navigation within the local repository.
+To enable cross-repository navigation, `scip-java` needs dependency metadata
+from your build.
+
+For Gradle builds, this requires enabling `maven-publish` and defining a Maven
+publication (for example, from `components["java"]`) in `build.gradle` or
+`build.gradle.kts`.
+
+If this is not configured, indexing may still succeed, but cross-repository
+definitions/references may not resolve.
+
+See [Manual configuration: Step 4 (optional): Enable cross-repository navigation](manual-configuration.md#step-4-optional-enable-cross-repository-navigation)
+for detailed setup options.
+
 > Running `scip-java index` may perform side-effects on your build like cleaning
 > the compile cache before indexing. This is done to make sure that all source
 > files in the codebase get indexed.
@@ -187,31 +180,33 @@ The `index.scip` file contains the SCIP index and is ready to be used.
 Run `scip-java index --help` to learn more about the available command-line
 options.
 
-```scala mdoc:passthrough
-com.sourcegraph.scip_java.ScipJava.printHelp(Console.out)
+```scala
+org.scip_code.scip_java.ScipJava.INSTANCE.printHelp(Console.out)
 ```
 
 ## Supported programming languages
 
-| Programming language | Gradle | Maven | sbt | Mill | Tracking issue                                              |
-| -------------------- | ------ | ----- | --- | ---- | ----------------------------------------------------------- |
-| Java                 | ✅     | ✅    | ✅  | ✅   |                                                             |
-| Scala                | ✅     | ❌    | ✅  | ✅   | [#302](https://github.com/sourcegraph/scip-java/issues/302) |
-| Kotlin               | ✅     | ❌    | n/a | n/a  |                                                             |
+| Programming language | Gradle | Maven | Tracking issue |
+| -------------------- | ------ | ----- | -------------- |
+| Java                 | ✅     | ✅    |                |
+| Kotlin               | ✅     | ❌    |                |
 
 ### Java
 
 The `scip-java` indexer is implemented as a Java compiler plugin that runs as
 part of your regular compilation in the build tool. By using Java compiler APIs,
 `scip-java` is able to generate accurate indexing information for a broad range
-of Java versions.
+of Java versions. The project targets support for the three most recent Java LTS
+releases.
 
 | Java version | Support                      | Tracking issue |
 | ------------ | ---------------------------- | -------------- |
 | Java 7       | ❌                           |                |
-| Java 8       | ✅                           |                |
-| Java 11      | ✅                           |                |
+| Java 8       | ❌                           |                |
+| Java 11      | ❌                           |                |
 | Java 17      | ✅, requires `--add-exports` |                |
+| Java 21      | ✅, requires `--add-exports` |                |
+| Java 25      | ✅, requires `--add-exports` |                |
 
 For Java 17 and newer versions, the following JVM options are required:
 
@@ -223,27 +218,11 @@ For Java 17 and newer versions, the following JVM options are required:
 --add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
 ```
 
-### Scala
-
-Scala version support should always match the Scala versions that are supported
-by [Metals](https://scalameta.org/metals), the Scala language server.
-
-| Scala version | Goto definition | Find references | Hover |
-| ------------- | --------------- | --------------- | ----- |
-| Scala 2.10.x  | ❌              | ❌              | ❌    |
-| Scala 2.11.x  | ✅              | ✅              | ✅    |
-| Scala 2.12.x  | ✅              | ✅              | ✅    |
-| Scala 2.13.x  | ✅              | ✅              | ✅    |
-| Scala 3.x     | ✅              | ✅              | ❌    |
-
-> Scala.js and Scala Native have equal support as Scala on the JVM.
-
 ### Kotlin
 
-The Kotlin support in scip-java is less mature compared to the Java and Scala
-support. Don't hesitate to report issues at
-https://github.com/sourcegraph/scip-java if you encounter issues using the
-Kotlin support.
+The Kotlin support in scip-java is less mature compared to the Java support.
+Don't hesitate to report issues at https://github.com/scip-code/scip-java if
+you encounter issues using the Kotlin support.
 
 ## Supported build tools
 
@@ -256,15 +235,13 @@ tools may require [manual configuration](manual-configuration.md).
 Please open an issue if your build tool is not listed in the table below. Feel
 free to subscribe to the tracking issues to receive updates on your build tool.
 
-| Build tool | Java | Scala | Kotlin | Tracking issue                                                                   |
-| ---------- | ---- | ----- | ------ | -------------------------------------------------------------------------------- |
-| Maven      | ✅   | ❌    | ❌     |                                                                                  |
-| Gradle     | ✅   | ✅    | ✅     |                                                                                  |
-| sbt        | ✅   | ✅    | n/a    |                                                                                  |
-| Ant        | ❌   | ❌    | ❌     | [sourcegraph/scip-java#305](https://github.com/sourcegraph/scip-java/issues/305) |
-| Bazel      | ✅   | ✅    | ❌     |                                                                                  |
-| Buck       | ❌   | ❌    | ❌     | [sourcegraph/scip-java#99](https://github.com/sourcegraph/scip-java/issues/99)   |
-| Mill       | ✅   | ✅    | ❌     |
+| Build tool | Java | Kotlin | Tracking issue                                                                   |
+| ---------- | ---- | ------ | -------------------------------------------------------------------------------- |
+| Maven      | ✅   | ❌     |                                                                                  |
+| Gradle     | ✅   | ✅     |                                                                                  |
+| Ant        | ❌   | ❌     | [scip-code/scip-java#305](https://github.com/scip-code/scip-java/issues/305) |
+| Bazel      | ✅   | ❌     |                                                                                  |
+| Buck       | ❌   | ❌     | [scip-code/scip-java#99](https://github.com/scip-code/scip-java/issues/99)   |
 
 **✅**: automatic indexing is fully supported. Please report a bug if the
 `scip-java index` command does not work on your codebase.
@@ -293,9 +270,8 @@ The following Gradle integrations are not yet supported:
 
 | Integration | Supported | Tracking issue                                                                   |
 | ----------- | --------- | -------------------------------------------------------------------------------- |
-| Android     | ❌        | [sourcegraph/scip-java#177](https://github.com/sourcegraph/scip-java/issues/177) |
+| Android     | ❌        | [scip-code/scip-java#177](https://github.com/scip-code/scip-java/issues/177) |
 | Kotlin      | ✅        |                                                                                  |
-| Scala       | ✅        |                                                                                  |
 
 ### Maven
 
@@ -307,35 +283,14 @@ The following Maven integrations are not yet supported:
 
 | Integration         | Supported | Tracking issue                                                                   |
 | ------------------- | --------- | -------------------------------------------------------------------------------- |
-| scala-maven-plugin  | ❌        | [sourcegraph/scip-java#301](https://github.com/sourcegraph/scip-java/issues/301) |
-| scalor-maven-plugin | ❌        | [sourcegraph/scip-java#301](https://github.com/sourcegraph/scip-java/issues/301) |
-| kotlin-maven-plugin | ❌        | [sourcegraph/scip-java#304](https://github.com/sourcegraph/scip-java/issues/304) |
-
-### sbt
-
-The `scip-java index` build should be able to automatically index most sbt
-projects, with the following caveats:
-
-| Integration   | Supported | Recommendation          |
-| ------------- | --------- | ----------------------- |
-| sbt <v0.13.17 | ❌        | Upgrade to sbt v0.13.17 |
-
-### Mill
-
-The `scip-java index` build should be able to automatically index most Mill
-projects, with the following caveats:
-
-| Integration   | Supported           | Recommendation                              |
-| ------------- | ------------------- | ------------------------------------------- |
-| Mill <v0.10.0 | ❌                  | Upgrade to Mill >= v0.10.0                  |
-| Mill <v0.10.6 | Only supports Scala | Upgrade to Mill >= v0.10.6 for Java support |
+| kotlin-maven-plugin | ❌        | [scip-code/scip-java#304](https://github.com/scip-code/scip-java/issues/304) |
 
 ### Bazel
 
 There are two approaches to index Bazel/Java codebases: automatic and manual.
 
 Don't hesitate to open an issue in the
-[scip-java repository](https://github.com/sourcegraph/scip-java) if you have any
+[scip-java repository](https://github.com/scip-code/scip-java) if you have any
 questions about using scip-java with Bazel builds.
 
 #### Automatic - `aspect`
@@ -358,31 +313,31 @@ requires the absolute path to the `scip-java` binary.
 
 It's possible to index Bazel codebases by integrating scip-java directly into
 the build configuration. To achieve this, scip-java must be configured in
-`WORKSPACE` and `BUILD` files. The scip-java repository contains an example for
+`MODULE.bazel` and `BUILD` files. The scip-java repository contains an example for
 how to configure everything, including how to build scip-java itself from
 source.
 
-- [WORKSPACE](https://github.com/sourcegraph/scip-java/blob/main/examples/bazel-example/WORKSPACE):
+- [MODULE.bazel](../examples/bazel-example/MODULE.bazel):
   adds the required dependencies to be able to run scip-java itself.
-- [BUILD](https://github.com/sourcegraph/scip-java/blob/main/examples/bazel-example/src/main/java/example/BUILD):
+- [BUILD](../examples/bazel-example/src/main/java/example/BUILD):
   configured `java_library` and `java_binary` targets to be indexed with
   scip-java.
 
-Once configured, build the codebase with the SemanticDB compiler plugin.
+Once configured, build the codebase with the SCIP compiler plugin.
 
 ```sh
-bazel build //... --@scip_java//semanticdb-javac:enabled=true
+bazel build //... --@scip_java//scip-javac:enabled=true
 ```
 
 Next, run the following command to generate the SCIP index (`index.scip`).
 
 ```
-bazel run @scip_java//scip-semanticdb:bazel -- --sourceroot $PWD
+bazel run @scip_java//scip-aggregator:bazel -- --sourceroot $PWD
 
-# (optional) Validate that SemanticDB files were generated.
-# The command below works for the `examples/bazel-example` directory in the sourcegraph/scip-java repository.
-❯ jar tf bazel-bin/src/main/java/example/libexample.jar | grep semanticdb$
-META-INF/semanticdb/src/main/java/example/Example.java.semanticdb
+# (optional) Validate that SCIP files were generated.
+# The command below works for the `examples/bazel-example` directory in the scip-code/scip-java repository.
+❯ jar tf bazel-bin/src/main/java/example/libexample.jar | grep scip$
+META-INF/scip/src/main/java/example/Example.java.scip
 ```
 
 Finally, run the following commands to upload the SCIP index to Sourcegraph.
